@@ -272,9 +272,8 @@ include any whitespace on either side, just like values from key-value
 pairs.
 
 Names must be defined before they are used, and may not be
-re-defined.  All resources being parsed as part of a configuration
-share a single namespace for defined names.  This means that resources
-which may be included more than once should not define any names.
+re-defined with a different value.  All resources being parsed as part of
+a configuration share a single namespace for defined names.
 
 References to defined names from configuration values use the syntax
 described for the \refmodule{ZConfig.substitution} module.
